<resources>
    <string name="app_name">Catat Arey</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="number">[In Progress]</string>
    <string name="total_produk_keluar_hari_ini">Total Produk Keluar Hari ini</string>
    <string name="total_produk_tersedia">Total Produk Tersedia</string>
    <string name="total_produk_masuk_hari_ini">Total Produk Masuk Hari ini</string>
    <string name="catat_perubahan">Catat Perubahan</string>
    <string name="prediksi_produk_dalam_7_hari">Prediksi untuk 7 hari</string>
    <string name="total_produk_masuk">Total Produk Masuk Hari Ini</string>
    <string name="total_produk_keluar">Total Produk Keluar Hari Ini</string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="list_produk">List Produk</string>
    <string name="cari_produk">Cari Produk</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="predict_sale">Prediksi Penjualan</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="harga_produk">Harga Produk</string>
    <string name="stok_produk">Stok Produk</string>
    <string name="keluar">Keluar</string>
    <string name="password_saat_ini">Password Saat Ini</string>
    <string name="password_baru">Password Baru</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="jumlah_keluar">Jumlah Keluar</string>
    <string name="jumlah_masuk">Jumlah Masuk</string>
    <string name="pcs">PCS</string>
    <string name="hari">Hari</string>
    <string name="estimasi_restock">Estimasi Restock</string>
    <string name="date">dd/mm/yyy</string>
    <string name="stok">Stok</string>
    <string name="setting_greeting">"Halo, %1$s!"</string>
    <string name="sales_prediction">Prediksi</string>
    <string name="sales_history">Riwayat</string>
</resources>