<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="48dp"
    android:paddingVertical="24dp">

    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_produk"
        android:textSize="12sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ed_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:background="@drawable/rounded_corner_stroke_white_4"
        android:padding="8dp"
        android:textSize="12sp" />


    <TextView
        android:id="@+id/tv_product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/harga_produk"
        android:textSize="12sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ed_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:background="@drawable/rounded_corner_stroke_white_4"
        android:padding="8dp"
        android:textSize="12sp" />


    <TextView
        android:id="@+id/tv_product_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/stok_produk"
        android:textSize="12sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ed_product_stock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:background="@drawable/rounded_corner_stroke_white_4"
        android:padding="8dp"
        android:textSize="12sp" />

</LinearLayout>