<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="8dp"
    tools:context=".ui.home.HomeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:menu="@menu/setting_menu"
            app:title="Home"
            app:titleTextAppearance="@style/ToolbarTitleStyle"
            app:titleTextColor="@color/black" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        tools:layout_editor_absoluteX="16dp">


        <!--    Purple Box-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_product_out"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_8"
            android:backgroundTint="@color/boxColor1"
            android:padding="8dp"
            app:layout_constraintEnd_toStartOf="@+id/space"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_sum_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_product_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/total_produk_keluar"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/tv_sum_out"
                app:layout_constraintTop_toBottomOf="@+id/tv_sum_out" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:id="@+id/space"
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!--    Orange Box-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_product_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_8"
            android:backgroundTint="@color/boxColor2"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/space"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_sum_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_product_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/total_produk_masuk"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/tv_sum_in"
                app:layout_constraintTop_toBottomOf="@+id/tv_sum_in" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--    Green Box-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_add_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corner_8"
            android:backgroundTint="@color/boxColor4"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="@+id/cl_product_in"
            app:layout_constraintStart_toStartOf="@id/cl_product_out"
            app:layout_constraintTop_toBottomOf="@+id/cl_product_out">

            <ImageView
                android:id="@+id/tv_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_add_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/tambah_produk"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/tv_add"
                app:layout_constraintTop_toBottomOf="@+id/tv_add" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_product_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/list_produk"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_add_product" />

        <EditText
            android:id="@+id/ed_search_product"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="-4dp"
            android:background="@drawable/rounded_corner_stroke_8"
            android:drawableStart="@drawable/ic_search_8"
            android:hint="@string/cari_produk"
            android:paddingStart="8dp"
            android:textColor="@color/searchText"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_product_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_product_list"
            app:layout_constraintTop_toTopOf="@+id/tv_product_list" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_product_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_product_list"
            tools:listitem="@layout/item_product" />

        <TextView
            android:id="@+id/tv_product_list_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="154dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_product_list" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/loading_product_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/rv_product_list" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>