<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="8dp"
    tools:context=".ui.product_detail.ProductDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:menu="@menu/delete_menu"
            app:navigationIcon="@drawable/ic_chevron_left_24"
            app:title="Product Name"
            app:titleTextAppearance="@style/ToolbarTitleStyle"
            app:titleTextColor="@color/black" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">


        <!--    Purple Box-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_product_out_today"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_8"
            android:backgroundTint="@color/boxColor1"
            android:padding="8dp"
            app:layout_constraintEnd_toStartOf="@+id/space"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_sum_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_product_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/total_produk_keluar_hari_ini"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/tv_sum_out"
                app:layout_constraintTop_toBottomOf="@+id/tv_sum_out" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:id="@+id/space"
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!--    Orange Box-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_product_in_today"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_8"
            android:backgroundTint="@color/boxColor2"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/space"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_sum_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_product_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/total_produk_masuk_hari_ini"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/tv_sum_in"
                app:layout_constraintTop_toBottomOf="@+id/tv_sum_in" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--    Blue Box-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_product_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corner_8"
            android:backgroundTint="@color/boxColor3"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="@+id/cl_product_out_today"
            app:layout_constraintStart_toStartOf="@+id/cl_product_out_today"
            app:layout_constraintTop_toBottomOf="@+id/cl_product_out_today">

            <TextView
                android:id="@+id/tv_sum_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_product_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/total_produk_tersedia"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/tv_sum_total"
                app:layout_constraintTop_toBottomOf="@+id/tv_sum_total" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <!--    Green Box-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_edit_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corner_8"
            android:backgroundTint="#E7CC00"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="@+id/cl_product_in_today"
            app:layout_constraintStart_toStartOf="@+id/cl_product_in_today"
            app:layout_constraintTop_toBottomOf="@+id/cl_product_out_today">

            <ImageView
                android:id="@+id/tv_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_add_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/catat_perubahan"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/tv_add"
                app:layout_constraintTop_toBottomOf="@+id/tv_add" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/tv_product_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/prediksi_produk_dalam_7_hari"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_product_total" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_forecast"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_product_list"
            tools:listitem="@layout/item_product_days_predict" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/whole_loading_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_product_list" />

        <TextView
            android:id="@+id/tv_rv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_product_list" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>